--- a/index.html
+++ b/index.html
@@ -25,42 +25,47 @@
         <a class="logo page-header__logo" href="#"
           ><span class="logo logo--hovered">Web</span>Studio</a
         >
-
-        <nav class="navigation">
-          <ul class="navigation__item">
-            <li>
-              <a class="navigation__link navigation__link--underscore" href="#"
-                >Agencja</a
+        <div class="navigation-to-hide">
+          <nav class="navigation">
+            <ul class="navigation__item">
+              <li>
+                <a
+                  class="navigation__link navigation__link--underscore"
+                  href="#"
+                  >Agencja</a
+                >
+              </li>
+              <li>
+                <a class="navigation__link" href="./portfolio.html"
+                  >Portfolio</a
+                >
+              </li>
+              <li><a class="navigation__link" href="#">Kontakt</a></li>
+            </ul>
+          </nav>
+          <ul class="contact">
+            <li class="contact__item contact__item--first">
+              <svg class="contact__icon" width="16" height="12">
+                <use href="./images/icons.svg#icon-envelope"></use>
+              </svg>
+              <a
+                class="contact__link contact__link--first"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
               >
             </li>
-            <li>
-              <a class="navigation__link" href="./portfolio.html">Portfolio</a>
+            <li class="contact__item contact__item--second">
+              <svg class="contact__icon" width="10" height="16">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg>
+              <a
+                class="contact__link contact__link--second"
+                href="tel:48111111111"
+                >+48 111 111 111</a
+              >
             </li>
-            <li><a class="navigation__link" href="#">Kontakt</a></li>
           </ul>
-        </nav>
-        <ul class="contact">
-          <li class="contact__item contact__item--first">
-            <svg class="contact__icon" width="16" height="12">
-              <use href="./images/icons.svg#icon-envelope"></use>
-            </svg>
-            <a
-              class="contact__link contact__link--first"
-              href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contact__item contact__item--second">
-            <svg class="contact__icon" width="10" height="16">
-              <use href="./images/icons.svg#icon-smartphone"></use>
-            </svg>
-            <a
-              class="contact__link contact__link--second"
-              href="tel:48111111111"
-              >+48 111 111 111</a
-            >
-          </li>
-        </ul>
+        </div>
         <div class="menu">
           <button
             class="menu__toggle js-open-menu"
@@ -141,7 +146,7 @@
         </div>
       </section>
       <!--sekcja czym się zajmujemy-->
-      <div class="mobile">
+      <div class="section-to-hide">
         <section class="section aboutus">
           <div class="aboutus__delay container">
             <h2 class="aboutus__title">Czym się zajmujemy</h2>
