--- a/index.html
+++ b/index.html
@@ -25,47 +25,42 @@
         <a class="logo page-header__logo" href="#"
           ><span class="logo logo--hovered">Web</span>Studio</a
         >
-        <div class="navigation-to-hide">
-          <nav class="navigation">
-            <ul class="navigation__item">
-              <li>
-                <a
-                  class="navigation__link navigation__link--underscore"
-                  href="#"
-                  >Agencja</a
-                >
-              </li>
-              <li>
-                <a class="navigation__link" href="./portfolio.html"
-                  >Portfolio</a
-                >
-              </li>
-              <li><a class="navigation__link" href="#">Kontakt</a></li>
-            </ul>
-          </nav>
-          <ul class="contact">
-            <li class="contact__item contact__item--first">
-              <svg class="contact__icon" width="16" height="12">
-                <use href="./images/icons.svg#icon-envelope"></use>
-              </svg>
-              <a
-                class="contact__link contact__link--first"
-                href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
+        <nav class="navigation">
+          <ul class="navigation__item">
+            <li>
+              <a class="navigation__link navigation__link--underscore" href="#"
+                >Agencja</a
               >
             </li>
-            <li class="contact__item contact__item--second">
-              <svg class="contact__icon" width="10" height="16">
-                <use href="./images/icons.svg#icon-smartphone"></use>
-              </svg>
-              <a
-                class="contact__link contact__link--second"
-                href="tel:48111111111"
-                >+48 111 111 111</a
-              >
+            <li>
+              <a class="navigation__link" href="./portfolio.html">Portfolio</a>
             </li>
+            <li><a class="navigation__link" href="#">Kontakt</a></li>
           </ul>
-        </div>
+        </nav>
+        <ul class="contact">
+          <li class="contact__item contact__item--first">
+            <svg class="contact__icon" width="16" height="12">
+              <use href="./images/icons.svg#icon-envelope"></use>
+            </svg>
+            <a
+              class="contact__link contact__link--first"
+              href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="contact__item contact__item--second">
+            <svg class="contact__icon" width="10" height="16">
+              <use href="./images/icons.svg#icon-smartphone"></use>
+            </svg>
+            <a
+              class="contact__link contact__link--second"
+              href="tel:48111111111"
+              >+48 111 111 111</a
+            >
+          </li>
+        </ul>
+
         <div class="menu">
           <button
             class="menu__toggle js-open-menu"
@@ -146,54 +141,54 @@
         </div>
       </section>
       <!--sekcja czym się zajmujemy-->
-      <div class="section-to-hide">
-        <section class="section aboutus">
-          <div class="aboutus__delay container">
-            <h2 class="aboutus__title">Czym się zajmujemy</h2>
-            <ul class="aboutus__content">
-              <li class="aboutus__item">
-                <figure class="aboutus__img">
-                  <img
-                    src="images/aboutus/box1.jpg"
-                    alt="czytnik oraz klawiatura komputerowa"
-                    width="370"
-                    height="294"
-                  />
-                  <figcaption class="aboutus__label">
-                    aplikacje komputerowe
-                  </figcaption>
-                </figure>
-              </li>
-              <li class="aboutus__item">
-                <figure class="aboutus__img">
-                  <img
-                    src="images/aboutus/box2.jpg"
-                    alt="smartfon i laptop"
-                    width="370"
-                    height="294"
-                  />
-                  <figcaption class="aboutus__label">
-                    aplikacje mobilne
-                  </figcaption>
-                </figure>
-              </li>
-              <li class="aboutus__item">
-                <figure class="aboutus__img">
-                  <img
-                    src="images/aboutus/box3.jpg"
-                    alt="tablet"
-                    width="370"
-                    height="294"
-                  />
-                  <figcaption class="aboutus__label">
-                    rozwiązania graficzne
-                  </figcaption>
-                </figure>
-              </li>
-            </ul>
-          </div>
-        </section>
-      </div>
+
+      <section class="section aboutus">
+        <div class="aboutus__delay container">
+          <h2 class="aboutus__title">Czym się zajmujemy</h2>
+          <ul class="aboutus__content">
+            <li class="aboutus__item">
+              <figure class="aboutus__img">
+                <img
+                  src="images/aboutus/box1.jpg"
+                  alt="czytnik oraz klawiatura komputerowa"
+                  width="370"
+                  height="294"
+                />
+                <figcaption class="aboutus__label">
+                  aplikacje komputerowe
+                </figcaption>
+              </figure>
+            </li>
+            <li class="aboutus__item">
+              <figure class="aboutus__img">
+                <img
+                  src="images/aboutus/box2.jpg"
+                  alt="smartfon i laptop"
+                  width="370"
+                  height="294"
+                />
+                <figcaption class="aboutus__label">
+                  aplikacje mobilne
+                </figcaption>
+              </figure>
+            </li>
+            <li class="aboutus__item">
+              <figure class="aboutus__img">
+                <img
+                  src="images/aboutus/box3.jpg"
+                  alt="tablet"
+                  width="370"
+                  height="294"
+                />
+                <figcaption class="aboutus__label">
+                  rozwiązania graficzne
+                </figcaption>
+              </figure>
+            </li>
+          </ul>
+        </div>
+      </section>
+
       <!--sekcja nasz zespół-->
       <section class="section ourteam">
         <div class="ourteam__delay container">
