--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link href="./css/main.min.css" rel="stylesheet" />
   </head>
   <body>
-    <header class="section page-header">
+    <header class="page-header">
       <div class="page-header__overlay container">
         <a class="logo page-header__logo" href="#"
           ><span class="logo logo--hovered">Web</span>Studio</a
@@ -61,18 +61,17 @@
           </li>
         </ul>
 
-        <div class="menu">
-          <button
-            class="menu__toggle js-open-menu"
-            aria-expanded="false"
-            aria-controls="mobile-menu"
-          >
-            <svg width="24" height="16">
-              <use href="./images/icons.svg#icon-menu_24px"></use>
-            </svg>
-          </button>
-        </div>
+        <button
+          class="menu__toggle js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg width="24" height="16">
+            <use href="./images/icons.svg#icon-menu_24px"></use>
+          </svg>
+        </button>
       </div>
+
       <section class="main-page">
         <div class="main-page__overlay container">
           <h1 class="main-page__title">
@@ -196,6 +195,7 @@
           <ul class="ourteam__list">
             <li class="ourteam__item">
               <img
+                class="ourteam__picture"
                 src="images/ourteam/ourteam1_450_460.jpg"
                 alt="mężczyzna w okularach"
                 srcset="
@@ -237,6 +237,7 @@
             </li>
             <li class="ourteam__item">
               <img
+                class="ourteam__picture"
                 src="images/ourteam/ourteam2_450_460.jpg"
                 alt="blondyka"
                 srcset="
@@ -278,6 +279,7 @@
             </li>
             <li class="ourteam__item">
               <img
+                class="ourteam__picture"
                 src="images/ourteam/ourteam3_450_460.jpg"
                 alt="blondyn"
                 srcset="
@@ -319,6 +321,7 @@
             </li>
             <li class="ourteam__item">
               <img
+                class="ourteam__picture"
                 src="images/ourteam/ourteam4_450_460.jpg"
                 alt="mężczyzna w okularach2"
                 srcset="
