--- a/index.html
+++ b/index.html
@@ -60,16 +60,17 @@
             >
           </li>
         </ul>
-
-        <button
-          class="menu__toggle js-open-menu"
-          aria-expanded="false"
-          aria-controls="mobile-menu"
-        >
-          <svg width="24" height="16">
-            <use href="./images/icons.svg#icon-menu_24px"></use>
-          </svg>
-        </button>
+        <div class="menu__button">
+          <button
+            class="menu__toggle js-open-menu"
+            aria-expanded="false"
+            aria-controls="mobile-menu"
+          >
+            <svg width="24" height="16">
+              <use href="./images/icons.svg#icon-menu_24px"></use>
+            </svg>
+          </button>
+        </div>
       </div>
 
       <section class="main-page">
