--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <ul class="block__list">
             <li class="block__item">
               <div class="attribute">
-                <svg class="attribute__icon" width="70" height="70">
+                <svg class="attribute__icon">
                   <use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
 
@@ -104,7 +104,7 @@
             </li>
             <li class="block__item">
               <div class="attribute">
-                <svg class="attribute__icon" width="70" height="70">
+                <svg class="attribute__icon">
                   <use href="./images/icons.svg#icon-clock-1"></use>
                 </svg>
 
@@ -117,7 +117,7 @@
             </li>
             <li class="block__item">
               <div class="attribute">
-                <svg class="attribute__icon" width="70" height="70">
+                <svg class="attribute__icon">
                   <use href="./images/icons.svg#icon-diagram-1"></use>
                 </svg>
 
@@ -130,7 +130,7 @@
             </li>
             <li class="block__item">
               <div class="attribute">
-                <svg class="attribute__icon" width="70" height="70">
+                <svg class="attribute__icon">
                   <use href="./images/icons.svg#icon-astronaut-1"></use>
                 </svg>
 
@@ -388,32 +388,32 @@
           <h2 class="our-clients__headline">Nasi klienci</h2>
           <ul class="our-clients__list">
             <li class="our-clients__item">
-              <svg width="170" height="92">
+              <svg class="our-clients__icon">
                 <use href="./images/icons.svg#icon-Client-1"></use>
               </svg>
             </li>
             <li class="our-clients__item">
-              <svg width="170" height="92">
+              <svg class="our-clients__icon">
                 <use href="./images/icons.svg#icon-Client-2"></use>
               </svg>
             </li>
             <li class="our-clients__item">
-              <svg width="170" height="92">
+              <svg class="our-clients__icon" width="170" height="92">
                 <use href="./images/icons.svg#icon-Client-3"></use>
               </svg>
             </li>
             <li class="our-clients__item">
-              <svg width="170" height="92">
+              <svg class="our-clients__icon" width="170" height="92">
                 <use href="./images/icons.svg#icon-Client-4"></use>
               </svg>
             </li>
             <li class="our-clients__item">
-              <svg width="170" height="92">
+              <svg class="our-clients__icon" width="170" height="92">
                 <use href="./images/icons.svg#icon-Client-5"></use>
               </svg>
             </li>
             <li class="our-clients__item">
-              <svg width="170" height="92">
+              <svg class="our-clients__icon" width="170" height="92">
                 <use href="./images/icons.svg#icon-Client-6"></use>
               </svg>
             </li>
