--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                   images/ourteam/ourteam1_354_374.jpg 354w,
                   images/ourteam/ourteam1_270_260.jpg 270w
                 "
-                sizes="(min-width: 1200px) 270px ,(min-width: 678px) 354px, 100vw"
+                sizes="(min-width: 1200px) 270px ,(min-width: 678px) 354px (min-width:480px) 450px, 100vw"
               />
               <h3 class="ourteam__name">John Doe</h3>
               <p class="ourteam__position">Product Designer</p>
@@ -266,7 +266,7 @@
                   images/ourteam/ourteam2_354_374.jpg 354w,
                   images/ourteam/ourteam2_270_260.jpg 270w
                 "
-                sizes="(min-width: 1200px) 270px ,(min-width: 678px) 354px, 100vw"
+                sizes="(min-width: 1200px) 270px ,(min-width: 678px) 354px (min-width:480px) 450px, 100vw"
               />
               <h3 class="ourteam__name">John Doe</h3>
               <p class="ourteam__position">Frontend Developer</p>
@@ -308,7 +308,7 @@
                   images/ourteam/ourteam3_354_374.jpg 354w,
                   images/ourteam/ourteam3_270_260.jpg 270w
                 "
-                sizes="(min-width: 1200px) 270px ,(min-width: 678px) 354px, 100vw"
+                sizes="(min-width: 1200px) 270px ,(min-width: 678px) 354px (min-width:480px) 450px, 100vw"
               />
               <h3 class="ourteam__name">John Doe</h3>
               <p class="ourteam__position">Marketing</p>
@@ -350,7 +350,7 @@
                   images/ourteam/ourteam4_354_374.jpg 354w,
                   images/ourteam/ourteam4_270_260.jpg 270w
                 "
-                sizes="(min-width: 1200px) 270px ,(min-width: 678px) 354px, 100vw"
+                sizes="(min-width: 1200px) 270px ,(min-width: 678px) 354px (min-width:480px) 450px, 100vw"
               />
               <h3 class="ourteam__name">John Doe</h3>
               <p class="ourteam__position">UI Designer</p>
@@ -608,12 +608,7 @@
         </li>
       </ul>
     </div>
-    <script src="./js/modal.js"></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
-      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
-      crossorigin="anonymous"
-    ></script>
+
     <script defer src="./js/mobile-menu.js"></script>
   </body>
 </html>
