--- a/index.html
+++ b/index.html
@@ -388,33 +388,33 @@
           <h2 class="our-clients__headline">Nasi klienci</h2>
           <ul class="our-clients__list">
             <li class="our-clients__item">
-              <svg class="our-clients__icon">
-                <use href="./images/icons.svg#icon-Client-1"></use>
+              <svg class="our-clients__icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-Logo-5"></use>
               </svg>
             </li>
             <li class="our-clients__item">
-              <svg class="our-clients__icon">
-                <use href="./images/icons.svg#icon-Client-2"></use>
+              <svg class="our-clients__icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-Logo-8"></use>
               </svg>
             </li>
             <li class="our-clients__item">
-              <svg class="our-clients__icon" width="170" height="92">
-                <use href="./images/icons.svg#icon-Client-3"></use>
+              <svg class="our-clients__icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-Logo-6"></use>
               </svg>
             </li>
             <li class="our-clients__item">
-              <svg class="our-clients__icon" width="170" height="92">
-                <use href="./images/icons.svg#icon-Client-4"></use>
+              <svg class="our-clients__icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-Logo-9"></use>
               </svg>
             </li>
             <li class="our-clients__item">
-              <svg class="our-clients__icon" width="170" height="92">
-                <use href="./images/icons.svg#icon-Client-5"></use>
+              <svg class="our-clients__icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-Logo-7"></use>
               </svg>
             </li>
             <li class="our-clients__item">
-              <svg class="our-clients__icon" width="170" height="92">
-                <use href="./images/icons.svg#icon-Client-6"></use>
+              <svg class="our-clients__icon" width="106" height="60">
+                <use href="./images/icons.svg#icon-Logo-10"></use>
               </svg>
             </li>
           </ul>
