--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
         </li>
       </ul>
     </div>
-
+    <script src="./js/modal.js"></script>
     <script defer src="./js/mobile-menu.js"></script>
   </body>
 </html>
