--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
               name="usercomments"
               placeholder="Wprowadź tekst"
             ></textarea>
-            <div class="check__grid">
+            <div class="check">
               <input
                 class="check__input"
                 type="checkbox"
