--- a/portfolio.html
+++ b/portfolio.html
@@ -78,29 +78,53 @@
         <div class="products__container container">
           <ul class="buttons">
             <li>
-              <button class="buttons__item" type="button">Wszystkie</button>
+              <button class="buttons__item buttons__item--all" type="button">
+                Wszystkie
+              </button>
             </li>
             <li>
-              <button class="buttons__item" type="button">Strony</button>
+              <button class="buttons__item buttons__item--pages" type="button">
+                Strony
+              </button>
             </li>
             <li>
-              <button class="buttons__item" type="button">Aplikacje</button>
+              <button
+                class="buttons__item buttons__item--aplications"
+                type="button"
+              >
+                Aplikacje
+              </button>
             </li>
             <li>
-              <button class="buttons__item" type="button">Dizajn</button>
+              <button class="buttons__item buttons__item--design" type="button">
+                Dizajn
+              </button>
             </li>
             <li>
-              <button class="buttons__item" type="button">Marketing</button>
+              <button
+                class="buttons__item buttons__item--marketing"
+                type="button"
+              >
+                Marketing
+              </button>
             </li>
           </ul>
           <ul class="grid">
             <li class="grid__item">
               <div class="products__item">
                 <img
-                  src="./images/portfolio/portfolio-technocrack.jpg"
-                  alt="Ekran Laptopa"
-                  width="370"
-                  height="294"
+                  class="products__image"
+                  src="./images/portfolio/technocrack_450_294.jpg"
+                  alt="Laptop monitor"
+                  srcset="
+                 images/portfolio/technocrack_354_294.jpg 354w,
+                 images/portfolio/technocrack_370_294.jpg 370w,
+                  images/portfolio/technocrack_450_294.jpg 450w,
+                 images/portfolio/technocrack_708_588.jpg 708w,
+                  images/portfolio/technocrack_740_588.jpg 740w
+                  images/portfolio/technocrack_900_588.jpg 900w,
+                "
+                  sizes="(min-width: 1200px) 370px ,(min-width: 678px) 354px (min-width:480px) 450px, 100vw"
                 />
                 <div class="products__overlay">
                   <p>
@@ -117,10 +141,18 @@
             <li class="grid__item">
               <div class="products__item">
                 <img
-                  src="./images/portfolio/portfolio-neworlean.jpg"
-                  alt="Koszykarze"
-                  width="370"
-                  height="294"
+                  class="products__image"
+                  src="./images/portfolio/neworlean_450_294.jpg"
+                  alt="Basketball players"
+                  srcset="
+                 images/portfolio/neworlean_354_294.jpg 354w,
+                 images/portfolio/neworlean_370_294.jpg  370w,
+                  images/portfolio/neworlean_450_294.jpg 450w,
+                 images/portfolio/neworlean_708_588.jpg 708w,
+                  images/portfolio/neworlean_740_588.jpg 740w
+                  images/portfolio/neworlean_900_588.jpg 900w,
+                "
+                  sizes="(min-width: 1200px) 370px ,(min-width: 678px) 354px (min-width:480px) 450px, 100vw"
                 />
                 <div class="products__overlay">
                   <p>
@@ -137,10 +169,18 @@
             <li class="grid__item">
               <div class="products__item">
                 <img
-                  src="./images/portfolio/portfolio-restaurant.jpg"
-                  alt="Logo restauracji"
-                  width="370"
-                  height="294"
+                  class="products__image"
+                  src="./images/portfolio/restaurant_450_294.jpg"
+                  alt="Resturant Logo"
+                  srcset="
+                 images/portfolio/restaurant_354_294.jpg 354w,
+                 images/portfolio/restaurant_370_294.jpg 370w,
+                  images/portfolio/restaurant_450_294.jpg 450w,
+                 images/portfolio/restaurant_708_588.jpg 708w,
+                  images/portfolio/restaurant_740_588.jpg 740w
+                  images/portfolio/restaurant_900_588.jpg 900w,
+                "
+                  sizes="(min-width: 1200px) 370px ,(min-width: 678px) 354px (min-width:480px) 450px, 100vw"
                 />
                 <div class="products__overlay">
                   <p>
@@ -157,10 +197,18 @@
             <li class="grid__item">
               <div class="products__item">
                 <img
-                  src="./images/portfolio/portfolio-projektprime.jpg"
-                  alt="Ałuchawki bezprzewodowe"
-                  width="370"
-                  height="294"
+                  class="products__image"
+                  src="./images/portfolio/projectprime_450_294.jpg"
+                  alt="headphones"
+                  srcset="
+                 images/portfolio/projectprime_354_294.jpg 354w,
+                 images/portfolio/projectprime_370_294.jpg 370w,
+                  images/portfolio/projectprime_450_294.jpg 450w,
+                 images/portfolio/projectprime_708_588.jpg 708w,
+                  images/portfolio/projectprime_740_588.jpg 740w
+                  images/portfolio/projectprime_900_588.jpg 900w,
+                "
+                  sizes="(min-width: 1200px) 370px ,(min-width: 678px) 354px (min-width:480px) 450px, 100vw"
                 />
                 <div class="products__overlay">
                   <p>
@@ -177,10 +225,18 @@
             <li class="grid__item">
               <div class="products__item">
                 <img
-                  src="./images/portfolio/portfolio-projectboxes.jpg"
-                  alt="Pudełka"
-                  width="370"
-                  height="294"
+                  class="products__image"
+                  src="./images/portfolio/projectboxes_450_294.jpg"
+                  alt="Boxes"
+                  srcset="
+                 images/portfolio/projectboxes_354_294.jpg 354w,
+                 images/portfolio/projectboxes_370_294.jpg 370w,
+                  images/portfolio/projectboxes_450_294.jpg 450w,
+                 images/portfolio/projectboxes_708_588.jpg 708w,
+                  images/portfolio/projectboxes_740_588.jpg 740w
+                  images/portfolio/projectboxes_900_588.jpg 900w,
+                "
+                  sizes="(min-width: 1200px) 370px ,(min-width: 678px) 354px (min-width:480px) 450px, 100vw"
                 />
                 <div class="products__overlay">
                   <p>
@@ -197,10 +253,18 @@
             <li class="grid__item">
               <div class="products__item">
                 <img
-                  src="./images/portfolio/portfolio-inspiration.jpg"
-                  alt="Ekran monitora"
-                  width="370"
-                  height="294"
+                  class="products__image"
+                  src="./images/portfolio/inspiration_450_294.jpg"
+                  alt="monitor screen"
+                  srcset="
+                 images/portfolio/inspiration_354_294.jpg 354w,
+                 images/portfolio/inspiration_370_294.jpg 370w,
+                  images/portfolio/inspiration_450_294.jpg 450w,
+                 images/portfolio/inspiration_708_588.jpg 708w,
+                  images/portfolio/inspiration_740_588.jpg 740w
+                  images/portfolio/inspiration_900_588.jpg 900w,
+                "
+                  sizes="(min-width: 1200px) 370px ,(min-width: 678px) 354px (min-width:480px) 450px, 100vw"
                 />
                 <div class="products__overlay">
                   <p>
@@ -217,10 +281,18 @@
             <li class="grid__item">
               <div class="products__item">
                 <img
-                  src="./images/portfolio/portfolio-magazine.jpg"
-                  alt="Periodyk"
-                  width="370"
-                  height="294"
+                  class="products__image"
+                  src="./images/portfolio/magazine_450_294.jpg"
+                  alt="magazine"
+                  srcset="
+                 images/portfolio/magazine_354_294.jpg 354w,
+                 images/portfolio/magazine_370_294.jpg 370w,
+                  images/portfolio/magazine_450_294.jpg 450w,
+                 images/portfolio/magazine_708_588.jpg 708w,
+                  images/portfolio/magazine_740_588.jpg 740w
+                  images/portfolio/magazine_900_588.jpg 900w,
+                "
+                  sizes="(min-width: 1200px) 370px ,(min-width: 678px) 354px (min-width:480px) 450px, 100vw"
                 />
                 <div class="products__overlay">
                   <p>
@@ -237,10 +309,18 @@
             <li class="grid__item">
               <div class="products__item">
                 <img
-                  src="./images/portfolio/portfolio-projektlab.jpg"
-                  alt="Zawieszka"
-                  width="370"
-                  height="294"
+                  class="products__image"
+                  src="./images/portfolio/projectlab_450_294.jpg"
+                  alt="Labeltag"
+                  srcset="
+                 images/portfolio/projectlab_354_294.jpg 354w,
+                 images/portfolio/projectlab_370_294.jpg 370w,
+                  images/portfolio/projectlab_450_294.jpg 450w,
+                 images/portfolio/projectlab_708_588.jpg 708w,
+                  images/portfolio/projectlab_740_588.jpg 740w
+                  images/portfolio/projectlab_900_588.jpg 900w,
+                "
+                  sizes="(min-width: 1200px) 370px ,(min-width: 678px) 354px (min-width:480px) 450px, 100vw"
                 />
                 <div class="products__overlay">
                   <p>
@@ -257,10 +337,18 @@
             <li class="grid__item">
               <div class="products__item">
                 <img
-                  src="./images/portfolio/portfolio-growingbusiness.jpg"
+                  class="products__image"
+                  src="./images/portfolio/growingbusiness_450_294.jpg"
                   alt="Notebook"
-                  width="370"
-                  height="294"
+                  srcset="
+                 images/portfolio/growingbusiness_354_294.jpg 354w,
+                 images/portfolio/growingbusiness_370_294.jpg 370w,
+                  images/portfolio/growingbusiness_450_294.jpg 450w,
+                 images/portfolio/growingbusiness_708_588.jpg 708w,
+                  images/portfolio/growingbusiness_740_588.jpg 740w
+                  images/portfolio/growingbusiness_900_588.jpg 900w,
+                "
+                  sizes="(min-width: 1200px) 370px ,(min-width: 678px) 354px (min-width:480px) 450px, 100vw"
                 />
                 <div class="products__overlay">
                   <p>
