--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework2 - main page</title>
+    <title>Homework</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
@@ -224,7 +224,6 @@
                   images/ourteam/ourteam1_354_374.jpg 354w,
                   images/ourteam/ourteam1_270_260.jpg 270w
                 "
-                sizes="(min-width: 1200px) 270px ,(min-width: 678px) 354px (min-width:480px) 450px, 100vw"
               />
               <h3 class="ourteam__name">John Doe</h3>
               <p class="ourteam__position">Product Designer</p>
